style: prevent background design clipping on constrained layouts Fixes #21

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -7,7 +7,6 @@
   align-items: center;
   min-height: 100vh;
   overflow: hidden;
-  background-color: var(--color-bg);
 }
 
 
